--- a/src/App.css
+++ b/src/App.css
@@ -7,25 +7,30 @@
   height: 100vh;
   background-color: #24263b;
 }
+
 .about_section {
   display: flex;
   background-color: #1f2235;
 }
-.projects_section {
+.skills_section{
   display: flex;
   background-color: #24263b;
 }
-.contact_section {
+.projects_section {
   display: flex;
   background-color: #1f2235;
 }
-
-/* @media (max-width:640px) {
-  .about_section {
-    height: 165vh;
-  }
-  .projects_section {
-    height: 165vh;
-  }
-  
-} */
+.contact_section {
+  display: flex;
+  background-color: #24263b;
+}
+.canvas-loader {
+  font-size: 10px;
+  width: 1em;
+  height: 1em;
+  border-radius: 50%;
+  position: relative;
+  text-indent: -9999em;
+  animation: mulShdSpin 1.1s infinite ease;
+  transform: translateZ(0);
+}
