--- a/src/App.css
+++ b/src/App.css
@@ -34,3 +34,6 @@
   animation: mulShdSpin 1.1s infinite ease;
   transform: translateZ(0);
 }
+.font-link {
+  font-family: 'Open Sans', cursive;
+}
